# OpenAD-Zero

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_v2_scan_persistence_models.py  0003_add_v2_normalized_parsing_models.py  (+5 more)
backend/app/: healthcheck_worker.py  main.py  worker.py
backend/scripts/: check_evidence_dir.py  check_runtime_permissions.py  check_tools.py  docker-entrypoint.sh  seed_demo.py
backend/tests/: conftest.py  test_api_contracts.py  test_app_lifespan.py  test_approvals_parameter_validation.py  test_approved_action_process_runner_integration.py  test_auth.py  test_auth_websocket.py  test_bloodhound_explorer_v1.py  test_bloodhound_integration.py  test_capabilities.py  test_command_policy.py  test_e2e_v2_safe_workflow.py  test_error_response.py  test_events_persistent.py  test_evidence.py  test_evidence_dir.py  test_health.py  test_high_risk_approval_gating.py  test_high_risk_decision_rules.py  test_high_risk_policy.py  test_high_risk_run_gating.py  test_initial_discovery_process_runner_integration.py  test_job_cancel_cleanup.py  test_jobs_api.py  test_manual_action_cards.py  test_metasploit_allowlist.py  test_metasploit_controlled_exploit.py  test_metasploit_frontend_contract.py  test_metasploit_policy.py  test_migrations_config.py  test_netexec_parser.py  test_netexec_policy_parser_planner.py  test_nmap_parser.py  test_no_binary_fixtures.py  test_normalization_api.py  test_normalization_bloodhound.py  test_normalization_idempotence.py  test_normalization_integration_workers.py  test_normalization_ldap_kerberos.py  test_normalization_netexec.py  (+74 more)
docs/: DEMO.md  (+44 more)
(+361 files in other folders)
