[project]
name='openadzero-backend'
version='0.1.0'
requires-python='>=3.12'
dependencies=['fastapi>=0.111','uvicorn[standard]>=0.30','pydantic-settings>=2.3','sqlalchemy>=2.0','alembic>=1.13','psycopg[binary]>=3.1','redis>=5.0','rq>=1.16','python-multipart>=0.0.9','httpx>=0.27','PyYAML>=6.0','Jinja2>=3.1','markdown>=3.6']
[project.optional-dependencies]
test = [
  'pytest>=8.2',
  'ruff>=0.8.0',
]
[tool.pytest.ini_options]
pythonpath=['.']
[tool.setuptools.packages.find]
include=['app*']
exclude=['alembic*']

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'B', 'UP', 'SIM']
ignore = ['B008', 'B904', 'E501', 'E402']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
line-ending = 'auto'
